Revert "Rearranged site link views"
We're not ready for this, yet.

This reverts commit 084164575cd8f11f899df32f93e92074b09ef3cf.

Change-Id: I358b31daf85c3f0f6c2c100f6e5442a1afe36e84

--- a/lib/resources/jquery.wikibase/themes/default/jquery.wikibase.sitelinkgrouplistview.css
+++ b/lib/resources/jquery.wikibase/themes/default/jquery.wikibase.sitelinkgrouplistview.css
@@ -4,11 +4,5 @@
  */
 .wikibase-sitelinkgrouplistview {
 	float: left;
-	width: 65em;
-}
-
-@media screen and ( min-width: 1570px ) {
-	.wikibase-sitelinkgrouplistview {
-		width: 26em;
-	}
+	width: 100%;
 }
