Updated sitelinkview styling
Updates sitelinkview styling as to the direction given by the UI mock-ups.

Change-Id: Ifaeb6e93280610f2372a849f2a55eb2fdae66276

--- a/lib/resources/jquery.wikibase/themes/default/jquery.wikibase.sitelinkgroupview.css
+++ b/lib/resources/jquery.wikibase/themes/default/jquery.wikibase.sitelinkgroupview.css
@@ -17,7 +17,7 @@
 }
 
 .wikibase-sitelinkgroupview.wb-edit {
-	background-color: #D6F3FF;
+	border-color: #2779aa;
 }
 
 .wikibase-sitelinkgroupview .wikibase-sitelinkgroupview-heading-container {
