Better handling of bidi content on entity terms table
Change-Id: Ie8b89613e83b7ad5589e2edab27088c6bc48b8eb

--- a/lib/resources/jquery.wikibase/themes/default/jquery.wikibase.entitytermsforlanguagelistview.css
+++ b/lib/resources/jquery.wikibase/themes/default/jquery.wikibase.entitytermsforlanguagelistview.css
@@ -52,6 +52,7 @@
 	line-height: 136%;
 	overflow: hidden;
 	padding-left: 0.4em;
+	padding-right: 0.4em;
 	padding-top: 0.8em;
 	text-overflow: ellipsis;
 	vertical-align: top;
