--- a/lib/resources/jquery.wikibase/themes/default/jquery.wikibase.sitelinkgroupview.css
+++ b/lib/resources/jquery.wikibase/themes/default/jquery.wikibase.sitelinkgroupview.css
@@ -27,7 +27,7 @@
 
 .wikibase-sitelinkgroupview .wikibase-sitelinkgroupview-heading-container {
 	background-color: #FFFFFF;
-	display: table-row;
+	display: block;
 }
 
 .wikibase-sitelinkgroupview.wb-edit .wikibase-sitelinkgroupview-heading-container {
@@ -35,13 +35,13 @@
 }
 
 .wikibase-sitelinkgroupview h2 {
-	display: table-cell;
+	display: inline;
 	float: none;
 	width: auto;
 }
 
 .wikibase-sitelinkgroupview .wikibase-sitelinkgroupview-heading-container > .wikibase-toolbar-container {
-	display: table-cell;
+	display: inline;
 	position: static;
 	padding-left: 0.5em;
 	width: auto;
