--- a/view/resources/jquery/wikibase/themes/default/jquery.wikibase.entitytermsview.css
+++ b/view/resources/jquery/wikibase/themes/default/jquery.wikibase.entitytermsview.css
@@ -9,12 +9,12 @@
 	width: 100%;
 }
 
-.wikibase-entitytermsview .wikibase-entitytermsview-heading .wikibase-entitytermsview-heading-label .wikibase-entitytermsview-heading-label-id {
+h1 .wikibase-entitytermsview-heading-label .wikibase-entitytermsview-heading-label-id {
 	color: grey;
 	font-size: 0.6em;
 	margin-left: 0.4em;
 }
-.wikibase-entitytermsview .wikibase-entitytermsview-heading .wikibase-entitytermsview-heading-label .wikibase-entitytermsview-heading-label-id:before {
+h1 .wikibase-entitytermsview-heading-label .wikibase-entitytermsview-heading-label-id:before {
 	/* Prevent id being hidden in ellipsis on very long labels: */
 	content: ' ';
 }
@@ -37,7 +37,7 @@
 	padding: 0;
 }
 
-.wikibase-entitytermsview .wikibase-entitytermsview-heading .wikibase-entitytermsview-heading-label,
+h1 .wikibase-entitytermsview-heading-label,
 .wikibase-entitytermsview .wikibase-entitytermsview-heading .wikibase-entitytermsview-heading-description {
 	word-wrap: break-word;
 }
